@@ -1,11 +1,15 @@
 package org.imaginationforpeople.android.thread;
 
 import java.io.IOException;
-import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.apache.http.HttpResponse;
+import org.apache.http.client.HttpClient;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.impl.client.DefaultHttpClient;
 import org.imaginationforpeople.android.handler.ProjectsListHandler;
 import org.imaginationforpeople.android.helper.UriHelper;
 import org.imaginationforpeople.android.model.I4pProjectTranslation;
@@ -14,6 +18,7 @@ import org.json.JSONException;
 
 import android.graphics.Bitmap;
 import android.graphics.BitmapFactory;
+import android.util.Log;
 
 import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonParseException;
@@ -51,10 +56,18 @@ public class ProjectsListThread extends BaseGetJson {
 			JsonParser parser = factory.createJsonParser(jsonProjects.getString(i));
 			I4pProjectTranslation project = mapper.readValue(parser, I4pProjectTranslation.class);
 			if(project.getProject().getPictures().size() > 0) {
-				String thumbUrl = project.getProject().getPictures().get(0).getThumbUrl();
-				InputStream URLcontent = (InputStream) new URL(thumbUrl).getContent();
-				Bitmap bitmap = BitmapFactory.decodeStream(URLcontent);
-				project.getProject().getPictures().get(0).setThumbBitmap(bitmap);
+				HttpClient httpClient = new DefaultHttpClient();
+				HttpGet httpGet = new HttpGet();
+				try {
+					URI uri = new URI(project.getProject().getPictures().get(0).getThumbUrl());
+					httpGet.setURI(uri);
+					HttpResponse response = httpClient.execute(httpGet);
+					Bitmap bitmap = BitmapFactory.decodeStream(response.getEntity().getContent());
+					project.getProject().getPictures().get(0).setThumbBitmap(bitmap);
+				} catch (URISyntaxException e) {
+					Log.w("Thumbnail", "Unable to load URI " + project.getProject().getPictures().get(0).getThumbUrl());
+					e.printStackTrace();
+				}
 			}
 			projects.add(project);
 		}
